Added prosody definition

--- a/studyguide.tex
+++ b/studyguide.tex
@@ -654,6 +654,9 @@ Experimental Design: A = baseline, B = treatment
 \end{itemize}
 
 \textbf{Other Audio Features}
+
+\textbf{Prosody}: sound characteristics such as syllable length, loudness, and pitch
+
 \begin{itemize}
 \item \textbf{Pitch}: describes how listener perceives a sound
 \subitem Sudden increase in pitch $\rightarrow$ high activation, anger
